kubernetes/default/forgejo/httproute-public.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-public
  namespace: default
  annotations:
    gatus.home-operations.com/endpoint: |-
      url: https://git.eviljungle.com/api/healthz
spec:
  parentRefs:
    - name: public
      namespace: kube-system
      sectionName: https
  hostnames:
    - git.eviljungle.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: forgejo-http
          port: 3000
